--- a/indext.html
+++ b/indext.html
@@ -12,6 +12,19 @@
 </head>
 <body>
     <div class="container">
+                       <div class="main-namue">
+                           <div class="logo-manue">
+                               <img class="logo-image" src="image/food-removebg-preview.png" alt=" logo image">
+                           </div>
+                           <div class="navbar">
+                               <ul>
+                                   <li><a href="#"> Home</a></li>
+                                   <li><a href="#"> About</a></li>
+                                   <li><a href="#"> Service</a></li>
+                                   <li><a href="#"> Other</a></li>
+                               </ul>
+                           </div>
+                       </div>
                     <!-- /*........ header section start ........*/ -->
                 <div class="header">
                     <div class="foot-text">
